--- a/mail-order/pom.xml
+++ b/mail-order/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.sun.mail</groupId>
     <artifactId>mail-order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mall-order</name>
+    <name>mail-order</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
