--- a/mail-ware/pom.xml
+++ b/mail-ware/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.sun.mail</groupId>
     <artifactId>mail-ware</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mall-ware</name>
+    <name>mail-ware</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
