--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
         <module>mail-member</module>
         <module>mail-order</module>
         <module>mail-ware</module>
+        <module>mail-common</module>
+        <module>mail-coupon</module>
     </modules>
 
     <properties>
         <spring.boot.version>2.2.5.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR3</spring.cloud.version>
-        <cloud.alibaba.version>2.2.1.RELEASE</cloud.alibaba.version>
+        <cloud.alibaba.version>2.2.0.RELEASE</cloud.alibaba.version>
     </properties>
 
     <dependencyManagement>
@@ -27,7 +29,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.5.RELEASE</version>
+                <version>2.2.0.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -37,6 +39,13 @@
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>3.0.3</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>mail-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
