--- a/mail-coupon/pom.xml
+++ b/mail-coupon/pom.xml
@@ -34,7 +34,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>com.sun.mail</groupId>
             <artifactId>mail-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
