--- a/mail-gateway/pom.xml
+++ b/mail-gateway/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>com.sun.mail</groupId>
             <artifactId>mail-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
