--- a/mail-member/pom.xml
+++ b/mail-member/pom.xml
@@ -29,17 +29,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>com.sun.mail</groupId>
             <artifactId>mail-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>2.2.2.RELEASE</version>
-        </dependency>
-
     </dependencies>
     <build>
         <plugins>
