--- a/mail-member/src/main/resources/bootstrap.yml
+++ b/mail-member/src/main/resources/bootstrap.yml
@@ -8,3 +8,8 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: properties
+    loadbalancer:
+      ribbon:
+        enabled: false
+server:
+  port: 8081
