--- a/mail-common/pom.xml
+++ b/mail-common/pom.xml
@@ -86,5 +86,10 @@
             <version>3.0.1-b08</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.4.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
