--- a/mail-coupon/pom.xml
+++ b/mail-coupon/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>mail-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
