--- a/mail-coupon/src/main/resources/application.yml
+++ b/mail-coupon/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8081
+
+spring:
+  kafka:
+    consumer:
+      group-id: test
+      auto-offset-reset: earliest
+      enable-auto-commit: false
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    group-id: test
+    bootstrap-servers: 127.0.0.1:9092
