--- a/mail-member/pom.xml
+++ b/mail-member/pom.xml
@@ -34,6 +34,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
