--- a/mail-product/pom.xml
+++ b/mail-product/pom.xml
@@ -44,6 +44,11 @@
             <version>3.16.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
