--- a/mail-test/pom.xml
+++ b/mail-test/pom.xml
@@ -40,6 +40,12 @@
           <version>4.3.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>dubbo</artifactId>
+          <version>2.6.10</version>
+      </dependency>
+
   </dependencies>
 
 </project>
